Añadido nuevos comandos y reorganizado todo el archivo

--- a/practica.cfg
+++ b/practica.cfg
@@ -1,44 +1,71 @@
-// ===============================
-// mariomo16 practice.cfg
-// ===============================
+// =========================================
+// Source: https://github.com/mariomo16/CS2
+// =========================================
 
 // ========== SERVER ==========
-sv_cheats                               "true"
-buddha                                  "1"
+sv_cheats                               "true"  // Permitir comandos trampa en el servidor
+sv_regeneration_force_on                "true"  // Activar la regeneración de salud
+sv_infinite_ammo                        "2"     // Munición infinita/Cargadores infinitos
+sv_showimpacts                          "3"     // Mostrar el impacto de las balas
+sv_ignoregrenaderadio                   "true"  // Desactiva los mensajes de radio de granadas
 
-mp_limitteams                           "0"
-mp_autoteambalance                      "false"
-mp_autokick                             "false"
+mp_limitteams                           "0"     // Diferencia máxima de jugadores entre equipos
+mp_autoteambalance                      "false" // Balance automático de equipos
+mp_autokick                             "false" // Auto-kick
+mp_forcecamera                          "0"     // Quiénes pueden observar los espectadores tras morir
+mp_friendlyfire                         "true"  // Fuego amigo
+mp_solid_teammates                      "1"     // Define si los compañeros son sólidos (no puedes atravesarlos)
+mp_tkpunish                             "0"     // Los jugadores que matan o dañan a su equipo serán castigados
+sv_deadtalk                             "true"  // Los jugadores muertos pueden hablar con los vivos
 
-mp_warmup_end
-mp_restartgame                          "1"
+mp_death_drop_taser                     "false" // Define si los taser se sueltan al morir
+mp_death_drop_grenade                   "0"     // Define si las granadas se sueltan al morir
+mp_death_drop_defuser                   "false" // Define si los kits de desactivación se sueltan al morir
+mp_defuser_allocation                   "2"     // Los antiterroristas reaparecen con kits de desactivación  
+mp_free_armor                           "2"     // Los jugadores reaparecen con chaleco y casco
+mp_death_drop_gun                       "1"     // Define qué arma se suelta al morir
+mp_drop_knife_enable                    "true"  // Permitir que los jugadores suelten sus cuchillos
+weapon_max_before_cleanup               "10"    // 
+
+mp_warmup_end                                   // Finaliza el calentamiento
+mp_restartgame                          "1"     // Reinicia el juego
+mp_team_intro_time                      "0"     // Duración en segundos de la introducción de equipos
+mp_force_pick_time                      "0"     // Tiempo en segundos para elegir equipo
 
 // ========== RULES ==========
-mp_roundtime                            "60"
-mp_roundtime_defuse                     "60"
-mp_ignore_round_win_conditions          "true"
-mp_freezetime                           "0"
-mp_buytime                              "3600"
-mp_buy_anywhere                         "1"
+mp_roundtime                            "60"    // Duración máxima de una ronda en minutos antes de ganar/perder
+mp_roundtime_defuse                     "0"     // Duración máxima de una ronda en minutos para modos de desactivación de bomba
+mp_roundtime_hostage                    "0"     // Duración máxima de una ronda en minutos para modos de rehenes
+mp_ignore_round_win_conditions          "true"  // Activa o desactiva las condiciones para ganar la ronda
 
-mp_maxmoney                             "99999"
-mp_startmoney                           "99999"
-mp_afterroundmoney                      "99999"
+mp_freezetime                           "0"     // Tiempo están congelados los jugadores al inicio de cada ronda
+mp_buytime                              "3600"  // Tiempo que tienen los jugadores para comprar después de comenzar la ronda
+mp_buy_anywhere                         "1"     // Permitir comprar fuera de la zona de compra
+
+mp_maxmoney                             "99999" // Define el máximo dinero que puede tener un jugador
+mp_startmoney                           "99999" // Define el dinero que reciben los jugadores al inicio de una mitad
+mp_afterroundmoney                      "99999" // Define el dinero que recibe cada jugador al final de cada ronda
+mp_playercashawards                     "false" // Define si los jugadores ganan dinero por acciones dentro del juego
+mp_teamcashawards                       "false" // Define si los equipos ganan dinero por acciones dentro del juego
 
 // ========== BOTS ==========
-bot_stop                                "1"
-bot_kick
+bot_chatter                             "off"   // Define qué pueden decir los bots en el juego
+bot_quota                               "2"     // Número máximo de bots en el servidor
+bot_stop                                "1"     // Los bots se detienen por completo
+bot_dont_shoot                          "true"  // Evita que los bots puedan disparar armas
 
 // ========== PRAC ==========
-mp_respawn_on_death_ct                  "true"
-mp_respawn_on_death_t                   "true"
-sv_regeneration_force_on                "true"
+mp_respawn_on_death_ct                  "true"  // Los antiterroristas reaparecen después de morir
+mp_respawn_on_death_t                   "true"  // Los terroristas reaparecen después de morir
 
-sv_infinite_ammo                        "1"
-ammo_grenade_limit_total                "5"
+sv_grenade_trajectory_prac_pipreview    "true"  // Vista picture-in-picture que muestra la trayectoria de granadas
+sv_grenade_trajectory_prac_trailtime    "3"     // Muestra la trayectoria de granadas durante un tiempo especificado
 
-sv_grenade_trajectory_prac_pipreview    "true"
-sv_grenade_trajectory_prac_trailtime    "8"
+ammo_grenade_limit_total                "5"     // Número máximo de granadas que puedes llevar al mismo tiempo
+mp_weapons_allow_typecount              "-1"    // Máximo de armas por ronda que los jugadores pueden comprar
+mp_backup_round_auto                    "false" // Guardar copias en memoria para jugadores que se reconectan
 
-sv_showimpacts                          "1"
-mp_drop_knife_enable                    "true"
+mp_ct_default_grenades                  "weapon_incgrenade weapon_hegrenade weapon_smokegrenade weapon_flashbang"
+mp_t_default_grenades                   "weapon_molotov weapon_hegrenade weapon_smokegrenade weapon_flashbang"
+
+jointeam                                "2 2"   // Unirse automáticamente al equipo Terrorista
