Añadido último ajuste pendiente y cambios menores

--- a/mario.cfg
+++ b/mario.cfg
@@ -1,11 +1,11 @@
-// =================================
-// CS2 autoexec.cfg - Mario Morales
-// Última actualización: 20/07/2025
-// =================================
+// =========================================
+// Source: https://github.com/mariomo16/CS2
+// =========================================
 
 // ================== Hidden =================
 cl_invites_only_friends                         "false"                     // Ignora invitaciones de desconocidos
 cl_invites_only_mainmenu                        "false"                     // Ignora invitaciones en partida
+ui_party_msg_sound_enabled                      "true"                      // Sonido de mensajes de la sala de grupo
 
 cl_dm_buyrandomweapons                          "false"                     // Armas aleatorias (DM)
 
@@ -14,13 +14,14 @@ r_show_build_info                               "false"                     // M
 // ========== Dashboard / Inventory ==========
 cl_color 					                    "0"                         // Color preferido
 
-ui_mainmenu_bkgnd_movie_9CA40421                "cs_office"                 // Cambiar el escenario del menú principal
+ui_mainmenu_bkgnd_movie_9CA40421                "de_dust2"                  // Cambiar el escenario del menú principal
 ui_vanitysetting_loadoutslot_ct                 "secondary1"                // Cambiar de arma (CT)
 ui_vanitysetting_loadoutslot_t                  "rifle0"                    // Cambiar de arma (T)
 ui_vanitysetting_team                           "t"                         // Mostrar agente CT/T equipado
-ui_inspect_bkgnd_map_9CA40421                   "de_dust2"                  // Cambiar el escenario para inspeccionar artículos
+ui_inspect_bkgnd_map_9CA40421                   "ar_baggage"                // Cambiar el escenario para inspeccionar artículos
 
 cl_inventory_saved_sort2                        "inv_sort_rarity"           // Orden de inventario
+cl_loadout_saved_sort                           "inv_sort_rarity"           // Orden de inventario en el menú de equipamiento
 
 // ================== Video ==================
 r_fullscreen_gamma 		                        "2.2"                       // Brillo
@@ -61,7 +62,7 @@ snd_mute_mvp_music_live_players                 "true"                      // S
 
 // =================== Game ==================
 con_enable                                      "true"                      // Activar consola de desarrolador
-mm_dedicated_search_maxping                     "25"                        // Ping máximo aceptable para el matchmaking
+mm_dedicated_search_maxping                     "52"                        // Ping máximo aceptable para el matchmaking
 rate 						                    "1000000"                   // Ancho de banda máximo aceptable
 cl_net_buffer_ticks                             "0"                         // Búfer para suavizar la pérdida o fluctuación de paquetes
 install_dlc_workshoptools_cvar                  "0"                         // Instalar las herramientas de Workshop de Counter-Strike
@@ -84,6 +85,8 @@ cl_teammate_colors_show                         "1"                         // M
 cl_teamid_overhead_colors_show                  "true"                      // Usar los colores de los jugadores en el id. de equipo
 lobby_default_privacy_bits2                     "0"                         // Permisos por defecto de la sala de amigos
 ui_setting_advertiseforhire_auto                "0"                         // Activar <<Deseando jugar>> cuando se inicia Counter-Strike
+
+ui_nearbylobbies_filter3                        "competitive"               // Filtro de <<Deseando jugar>>
 
 // ============== Communication ==============
 cl_player_ping_mute                             "1"                         // Indicaciones del jugador
@@ -113,11 +116,11 @@ cl_showloadout 					                "true"                      // Mostrar siemp
 cl_use_opens_buy_menu                           "false"                     // Abrir el menú de compra con la tecla usar
 cl_buywheel_nonumberpurchasing                  "true"                      // Teclas numéricas en el menú de compra
 cl_buywheel_donate_key                          "1"                         // Tecla de donación del menú de compra
-//                                                                          // Última arma en el menú radial
+cl_quickinventory_lastinv                       "true"                      // Última arma en el menú radial
 
 viewmodel_fov 					                "68"                        // Campo de visión del cliente
 viewmodel_offset_x 				                "2.5"                       // Desplazamiento en X de tu modelo de vista
-viewmodel_offset_y 				                "0"                         // Desplazamiento en Y de tu modelo de vista
+viewmodel_offset_y 				                "-2"                        // Desplazamiento en Y de tu modelo de vista
 viewmodel_offset_z 				                "-1.5"                      // Desplazamiento en Z de tu modelo de vista
 
 // ============== Radar / Tablet =============
@@ -175,7 +178,7 @@ mouse_inverty                                   "false"                     // I
 option_duck_method                              "false"                     // Modo agachado
 option_speed_method                             "false"                     // Modo caminar
 cl_debounce_zoom                                "false"                     // Mantener pulsado el zoom
-sensitivity                                     "1.38"                      // Sensibilidad del ratón
+sensitivity                                     "1.25"                      // Sensibilidad del ratón
 zoom_sensitivity_ratio                          "1"                         // Multiplicador de sensibilidad del zoom
 
 // ================== Binds ==================
@@ -222,18 +225,20 @@ bind                                            "c"                         "+vo
 bind                                            "DEL"                       "voice_modenable_toggle"
 bind                                            "`"                         "toggleradarscale"
 
-bind                                            "F5"                        "cl_crosshairstyle 4; cl_crosshair_recoil false; cl_crosshairdot false; cl_crosshairsize 1; cl_crosshairthickness 1; cl_crosshairgap -4; cl_crosshair_drawoutline false; cl_crosshair_outlinethickness 1; cl_crosshaircolor_r 0; cl_crosshaircolor_g 255; cl_crosshaircolor_b 0; cl_crosshairusealpha true; cl_crosshairalpha 255; cl_crosshair_t false; cl_crosshairgap_useweaponvalue false"
-bind                                            "F6"                        "cl_crosshairstyle 5; cl_crosshair_recoil false; cl_crosshairdot true; cl_crosshairsize 0.5; cl_crosshairthickness 0.5; cl_crosshairgap -3.5; cl_crosshair_drawoutline false; cl_crosshair_outlinethickness 1; cl_crosshaircolor_r 0; cl_crosshaircolor_g 255; cl_crosshaircolor_b 0; cl_crosshairusealpha true; cl_crosshairalpha 255; cl_crosshair_t false; cl_crosshairgap_useweaponvalue false"
-bind                                            "F7"                        "cl_crosshairstyle 4; cl_crosshair_recoil false; cl_crosshairdot false; cl_crosshairsize 2; cl_crosshairthickness 0; cl_crosshairgap -2; cl_crosshair_drawoutline true; cl_crosshair_outlinethickness 0.5; cl_crosshaircolor_r 50; cl_crosshaircolor_g 250; cl_crosshaircolor_b 50; cl_crosshairusealpha true; cl_crosshairalpha 255; cl_crosshair_t false; cl_crosshairgap_useweaponvalue false"
-bind                                            "F8"                        "cl_crosshairstyle 4; cl_crosshair_recoil false; cl_crosshairdot false; cl_crosshairsize 2; cl_crosshairthickness 0; cl_crosshairgap -3; cl_crosshair_drawoutline false; cl_crosshair_outlinethickness 1; cl_crosshaircolor_r 0; cl_crosshaircolor_g 255; cl_crosshaircolor_b 0; cl_crosshairusealpha true; cl_crosshairalpha 255; cl_crosshair_t false; cl_crosshairgap_useweaponvalue false"
-
-bind                                            "F1"                        "volume 0.01"
-bind                                            "F2"                        "volume 0.05"
 bind                                            "F3"                        "volume 0.2"
 bind                                            "F4"                        "volume 1"
 
+bind                                            "F5"                        "cl_crosshairstyle 5; cl_crosshair_recoil false; cl_crosshairdot true; cl_crosshairsize 0.5; cl_crosshairthickness 0.5; cl_crosshairgap -3.5; cl_crosshair_drawoutline false; cl_crosshair_outlinethickness 1; cl_crosshaircolor_r 0; cl_crosshaircolor_g 255; cl_crosshaircolor_b 255; cl_crosshairusealpha true; cl_crosshairalpha 255; cl_crosshair_t false; cl_crosshairgap_useweaponvalue false"
+bind                                            "F6"                        "cl_crosshairstyle 4; cl_crosshair_recoil false; cl_crosshairdot false; cl_crosshairsize 1; cl_crosshairthickness 1; cl_crosshairgap -4; cl_crosshair_drawoutline false; cl_crosshair_outlinethickness 1; cl_crosshaircolor_r 0; cl_crosshaircolor_g 255; cl_crosshaircolor_b 255; cl_crosshairusealpha true; cl_crosshairalpha 255; cl_crosshair_t false; cl_crosshairgap_useweaponvalue false"
+bind                                            "F7"                        "cl_crosshairstyle 4; cl_crosshair_recoil false; cl_crosshairdot false; cl_crosshairsize 1; cl_crosshairthickness 1; cl_crosshairgap -4; cl_crosshair_drawoutline false; cl_crosshair_outlinethickness 1; cl_crosshaircolor_r 255; cl_crosshaircolor_g 255; cl_crosshaircolor_b 0; cl_crosshairusealpha true; cl_crosshairalpha 255; cl_crosshair_t false; cl_crosshairgap_useweaponvalue false"
+bind                                            "F8"                        "cl_crosshairstyle 4; cl_crosshair_recoil false; cl_crosshairdot false; cl_crosshairsize 1; cl_crosshairthickness 1; cl_crosshairgap -4; cl_crosshair_drawoutline false; cl_crosshair_outlinethickness 1; cl_crosshaircolor_r 0; cl_crosshaircolor_g 255; cl_crosshaircolor_b 0; cl_crosshairusealpha true; cl_crosshairalpha 255; cl_crosshair_t false; cl_crosshairgap_useweaponvalue false"
+
 bind                                            "n"                         "noclip"
+bind                                            "UPARROW"                   "bot_add"
+bind                                            "DOWNARROW"                 "bot_kick"
 bind                                            "RIGHTARROW"                "sv_rethrow_last_grenade"
+bind                                            "LEFTARROW"                 "bot_place"
+
 bind                                            "PGDN"                      "demoui"
 bind                                            "PGUP"                      "demo_togglepause"
 
@@ -267,7 +272,7 @@ alias					        	            "skeleton"	                "exec custom/knives/sk
 alias					        	            "survival"	                "exec custom/knives/survival"
 alias                            	            "kukri"	                    "exec custom/knives/kukri"
 
-alias                                           "inspects"                  "connect 116.202.246.151:27015"
+alias                                           "inspects"                  "connect 131.153.146.62:27015"
 
 host_writeconfig
 clear
