Añadido nuevos ajustes, cambios menores, y crosshaircolor fix

--- a/mario.cfg
+++ b/mario.cfg
@@ -127,11 +127,13 @@ viewmodel_offset_z 				                "-1.5"                      // Desplazami
 cl_radar_always_centered 			            "false"                     // Radar centrado en el jugador
 cl_radar_rotate 				                "true"                      // Radar rotatorio
 cl_hud_radar_map_additive                       "true"                      // Mezclar mapa del radar con el fondo
+cl_hud_radar_blur_background                    "false"                     //? Blur background
 cl_hud_radar_background_alpha                   "1"                         // Opacidad del fondo del radar
 cl_hud_radar_scale 				                "0.99"                      // Tamaño del radar
 cl_radar_scale 					                "0.43"                      // Zoom del radar
 cl_radar_scale_alternate                        "1"                         // Zoom alternativo del mapa del radar
 cl_radar_square_with_scoreboard                 "true"                      // Cambiar de forma al abrir el marcador
+cl_radar_square_always                          "false"                     //? Force Square Shape
 cl_radar_scale_dynamic                          "false"                     // Radar con zoom dinámico
 
 cl_radar_icon_scale_min 			            "0.77"                      // Tamaño del punto de tu personaje en el radar
@@ -222,18 +224,18 @@ bind                                            "z"                         "rad
 bind                                            "u"                         "messagemode2"
 bind                                            "y"                         "messagemode"
 bind                                            "c"                         "+voicerecord"
-bind                                            "DEL"                       "voice_modenable_toggle"
 bind                                            "`"                         "toggleradarscale"
 
-bind                                            "F3"                        "volume 0.2"
-bind                                            "F4"                        "volume 1"
+bind                                            "F9"                        "voice_modenable_toggle"
+bind                                            "F10"                       "volume 0.01"
+bind                                            "F11"                       "volume 1"
 
-bind                                            "F5"                        "cl_crosshairstyle 5; cl_crosshair_recoil false; cl_crosshairdot true; cl_crosshairsize 0.5; cl_crosshairthickness 0.5; cl_crosshairgap -3.5; cl_crosshair_drawoutline false; cl_crosshair_outlinethickness 1; cl_crosshaircolor_r 0; cl_crosshaircolor_g 255; cl_crosshaircolor_b 255; cl_crosshairusealpha true; cl_crosshairalpha 255; cl_crosshair_t false; cl_crosshairgap_useweaponvalue false"
-bind                                            "F6"                        "cl_crosshairstyle 4; cl_crosshair_recoil false; cl_crosshairdot false; cl_crosshairsize 1; cl_crosshairthickness 1; cl_crosshairgap -4; cl_crosshair_drawoutline false; cl_crosshair_outlinethickness 1; cl_crosshaircolor_r 0; cl_crosshaircolor_g 255; cl_crosshaircolor_b 255; cl_crosshairusealpha true; cl_crosshairalpha 255; cl_crosshair_t false; cl_crosshairgap_useweaponvalue false"
-bind                                            "F7"                        "cl_crosshairstyle 4; cl_crosshair_recoil false; cl_crosshairdot false; cl_crosshairsize 1; cl_crosshairthickness 1; cl_crosshairgap -4; cl_crosshair_drawoutline false; cl_crosshair_outlinethickness 1; cl_crosshaircolor_r 255; cl_crosshaircolor_g 255; cl_crosshaircolor_b 0; cl_crosshairusealpha true; cl_crosshairalpha 255; cl_crosshair_t false; cl_crosshairgap_useweaponvalue false"
-bind                                            "F8"                        "cl_crosshairstyle 4; cl_crosshair_recoil false; cl_crosshairdot false; cl_crosshairsize 1; cl_crosshairthickness 1; cl_crosshairgap -4; cl_crosshair_drawoutline false; cl_crosshair_outlinethickness 1; cl_crosshaircolor_r 0; cl_crosshaircolor_g 255; cl_crosshaircolor_b 0; cl_crosshairusealpha true; cl_crosshairalpha 255; cl_crosshair_t false; cl_crosshairgap_useweaponvalue false"
+bind                                            "F5"                        "cl_crosshairstyle 5; cl_crosshair_recoil false; cl_crosshairdot false; cl_crosshairsize 0.5; cl_crosshairthickness 0.5; cl_crosshairgap -3.5; cl_crosshair_drawoutline false; cl_crosshair_outlinethickness 1; cl_crosshaircolor_r 0; cl_crosshaircolor_g 255; cl_crosshaircolor_b 255; cl_crosshairusealpha true; cl_crosshairalpha 255; cl_crosshair_t false; cl_crosshairgap_useweaponvalue false; cl_crosshaircolor 4"
+bind                                            "F6"                        "cl_crosshairstyle 4; cl_crosshair_recoil false; cl_crosshairdot false; cl_crosshairsize 1; cl_crosshairthickness 1; cl_crosshairgap -4; cl_crosshair_drawoutline false; cl_crosshair_outlinethickness 1; cl_crosshaircolor_r 0; cl_crosshaircolor_g 255; cl_crosshaircolor_b 255; cl_crosshairusealpha true; cl_crosshairalpha 255; cl_crosshair_t false; cl_crosshairgap_useweaponvalue false; cl_crosshaircolor 4"
+bind                                            "F7"                        "cl_crosshairstyle 4; cl_crosshair_recoil false; cl_crosshairdot false; cl_crosshairsize 2; cl_crosshairthickness 0; cl_crosshairgap -2; cl_crosshair_drawoutline true; cl_crosshair_outlinethickness 0.5; cl_crosshaircolor_r 50; cl_crosshaircolor_g 250; cl_crosshaircolor_b 50; cl_crosshairusealpha true; cl_crosshairalpha 255; cl_crosshair_t false; cl_crosshairgap_useweaponvalue false; cl_crosshaircolor 1"
+bind                                            "F8"                        "toggle cl_crosshaircolor 1 2 4"
 
-bind                                            "n"                         "noclip"
+bind                                            "x"                         "noclip"
 bind                                            "UPARROW"                   "bot_add"
 bind                                            "DOWNARROW"                 "bot_kick"
 bind                                            "RIGHTARROW"                "sv_rethrow_last_grenade"
