Actualizado para compatibilidad con la última versión de CS2.

--- a/mario.cfg
+++ b/mario.cfg
@@ -14,11 +14,11 @@ r_show_build_info                               "false"                     // M
 // ========== Dashboard / Inventory ==========
 cl_color 					                    "0"                         // Color preferido
 
-ui_mainmenu_bkgnd_movie_9CA40421                "de_dust2"                  // Cambiar el escenario del menú principal
+ui_mainmenu_bkgnd_movie_539CD0B9                "de_ancient_night"          // Cambiar el escenario del menú principal
 ui_vanitysetting_loadoutslot_ct                 "secondary1"                // Cambiar de arma (CT)
 ui_vanitysetting_loadoutslot_t                  "rifle0"                    // Cambiar de arma (T)
 ui_vanitysetting_team                           "t"                         // Mostrar agente CT/T equipado
-ui_inspect_bkgnd_map_9CA40421                   "ar_baggage"                // Cambiar el escenario para inspeccionar artículos
+ui_inspect_bkgnd_map_539CD0B9                   "ar_baggage"                // Cambiar el escenario para inspeccionar artículos
 
 cl_inventory_saved_sort2                        "inv_sort_rarity"           // Orden de inventario
 cl_loadout_saved_sort                           "inv_sort_rarity"           // Orden de inventario en el menú de equipamiento
@@ -50,7 +50,7 @@ voice_always_sample_mic                         "false"                     // P
 voice_threshold                                 "-120"                      // Umbral de activación del micrófono
 
 // ================== Music ==================
-snd_menumusic_volume				            "0.02"                      // Volumen del menú principal
+snd_menumusic_volume				            "0"                         // Volumen del menú principal
 snd_roundstart_volume 				            "0"                         // Volumen de inicio de ronda
 snd_roundaction_volume                          "0"                         // Volumen de acción de ronda
 snd_roundend_volume 				            "0"                         // Volumen de fin de ronda
@@ -127,13 +127,13 @@ viewmodel_offset_z 				                "-1.5"                      // Desplazami
 cl_radar_always_centered 			            "false"                     // Radar centrado en el jugador
 cl_radar_rotate 				                "true"                      // Radar rotatorio
 cl_hud_radar_map_additive                       "true"                      // Mezclar mapa del radar con el fondo
-cl_hud_radar_blur_background                    "false"                     //? Blur background
+cl_hud_radar_blur_background                    "false"                     // Desenforcar fondo
 cl_hud_radar_background_alpha                   "1"                         // Opacidad del fondo del radar
 cl_hud_radar_scale 				                "0.99"                      // Tamaño del radar
 cl_radar_scale 					                "0.43"                      // Zoom del radar
 cl_radar_scale_alternate                        "1"                         // Zoom alternativo del mapa del radar
 cl_radar_square_with_scoreboard                 "true"                      // Cambiar de forma al abrir el marcador
-cl_radar_square_always                          "false"                     //? Force Square Shape
+cl_radar_square_always                          "false"                     // Forzar forma cuadrada
 cl_radar_scale_dynamic                          "false"                     // Radar con zoom dinámico
 
 cl_radar_icon_scale_min 			            "0.77"                      // Tamaño del punto de tu personaje en el radar
