Ajustes menores y binds

--- a/practica.cfg
+++ b/practica.cfg
@@ -7,6 +7,7 @@ sv_cheats                               "true"  // Permitir comandos trampa en e
 sv_regeneration_force_on                "true"  // Activar la regeneración de salud
 sv_infinite_ammo                        "2"     // Munición infinita/Cargadores infinitos
 sv_showimpacts                          "3"     // Mostrar el impacto de las balas
+sv_showimpacts_time                     "3"     // 
 sv_ignoregrenaderadio                   "true"  // Desactiva los mensajes de radio de granadas
 
 mp_limitteams                           "0"     // Diferencia máxima de jugadores entre equipos
@@ -36,7 +37,7 @@ mp_force_pick_time                      "0"     // Tiempo en segundos para elegi
 mp_roundtime                            "60"    // Duración máxima de una ronda en minutos antes de ganar/perder
 mp_roundtime_defuse                     "0"     // Duración máxima de una ronda en minutos para modos de desactivación de bomba
 mp_roundtime_hostage                    "0"     // Duración máxima de una ronda en minutos para modos de rehenes
-mp_ignore_round_win_conditions          "true"  // Activa o desactiva las condiciones para ganar la ronda
+mp_ignore_round_win_conditions          "false" // Activa o desactiva las condiciones para ganar la ronda
 
 mp_freezetime                           "0"     // Tiempo están congelados los jugadores al inicio de cada ronda
 mp_buytime                              "3600"  // Tiempo que tienen los jugadores para comprar después de comenzar la ronda
@@ -68,4 +69,13 @@ mp_backup_round_auto                    "false" // Guardar copias en memoria par
 mp_ct_default_grenades                  "weapon_incgrenade weapon_hegrenade weapon_smokegrenade weapon_flashbang"
 mp_t_default_grenades                   "weapon_molotov weapon_hegrenade weapon_smokegrenade weapon_flashbang"
 
-jointeam                                "2 2"   // Unirse automáticamente al equipo Terrorista
+jointeam                                "2 2"   // Unirse al equipo T
+
+bhop                                            // Ejecutar el script de bunnyhop
+
+// ========== BINDS ========
+bind                                    "x"                         "noclip"
+bind                                    "UPARROW"                   "bot_add"
+bind                                    "DOWNARROW"                 "bot_kick"
+bind                                    "RIGHTARROW"                "bot_place"
+bind                                    "LEFTARROW"                 "sv_rethrow_last_grenade"
